Check if build has succeeded